--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "clsx": "^2.1.1",
+    "iso-3166-1": "^2.1.1",
     "lucide-react": "^0.452.0",
     "next": "14.2.14",
     "react": "^18",
