--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "clsx": "^2.1.1",
     "iso-3166-1": "^2.1.1",
     "lucide-react": "^0.452.0",
@@ -18,6 +20,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-select": "^5.8.3",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
