--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "iso-3166-1": "^2.1.1",
     "lucide-react": "^0.452.0",
     "next": "14.2.14",
